# UninaLabEX

./: CMakeLists.txt
Esami/1/: funzioni.c  funzioni.h  istruzioni.txt  main.c
Esami/2/: funzioni.c  funzioni.h  istruzioni.txt  main.c  utente42.txt
Esami/esami/esame/: canzoni_2.txt  functions.c  functions.h  istruzioni.txt  main  main.c  prova
Esami/esami/esame10/: a.out  condivisi.txt  functions.c  functions.h  main.c  messaggi.txt
Esami/esami/esame11/: a.out  configurazioni.txt  functions.c  functions.h  istruzioni.txt  main.c
Esami/esami/esame2/: canzoni.txt  canzoni2.txt  functions.c  functions.h  istruzioni.txt  main  main.c
Esami/esami/esame3/: condivisi.txt  functions.c  functions.h  istruzioni.txt  main  main.c  utente42.txt
Esami/esami/esame4/: functions.c  functions.h  istruzioni.txt  main  main.c  vittorie_O.txt  vittorie_X.txt
Esami/esami/esame5/: a.out  coordinate.txt  main.c  matrix.txt
Esami/esami/esame6/: a.out  main.c  utenti.txt  utenti_riscritti.txt
Esami/esami/esame7/: a.out  main.c  studenti.txt  studenti2.txt
Esami/esami/esame8/: a.out  classi.txt  main.c
Esami/esami/esame9/: a.out  functions.c  functions.h  functions.h.gch  main.c
Esercizi/1/: 1.c  10.c  11.c  12.c  13.c  14.c  15.c  16.c  17.c  18.c  19.c  2.c  20.c  21.c  22.c  23.c  24.c  25.c  26.c  27.c  28.c  29.c  3.c  30.c  31.c  32.c  33.c  34.c  35.c  36.c  37.c  38.c  39.c  4.c  40.c  41.c  42.c  43.c  44.c  45.c  (+9 more)
Esercizi/2/1/: 1.c  10.c  11.c  12.c  13.c  14.c  15.c  16.c  17.c  18.c  19.c  2.c  20.c  3.c  4.c  5.c  6.c  7.c  8.c  9.c
Esercizi/2/2/: 1.c  2.c  3.c  4.c  5.c  6.c  7.c
Esercizi/2/3/: 1.c  10.c  11.c  2.c  3.c  4.c  5.c  6.c  7.c  8.c  9.c
Esercizi/2/4/: 1.c  2.c  3.c  4.c
Esercizi/3/1/: 1.c  2.c
Esercizi/3/2/: 1.c  2.c  3.c  4.c
Esercizi/3/3/: 1.c  2.c  3.c  4.c
Esercizi/4/1/: 0.c  1.c  2.c  3.c
Esercizi/4/2/: 1.c  10.c  11.c  12.c  13.c  14.c  2.c  3.c  4.c  5.c  6.c  7.c  8.c  9.c
Esercizi/pilecode/: 1.c  2.c  3.c  4.c  5.c
Esercizi/random_file/cassaforte/: main.c
Esercizi/random_file/impiccato/: dizionario.txt  main.c
Esercizi/ricorsione/1/: 1.c  2.c  3.c  4.c  5.c  6.c  7.c  8.c
Esercizi/ricorsione/2/: 1.c  2.c  3.c  4.c
Esercizi/structs/: 1.c
Esercizi/structs/2/: 2.c  iscritti.txt
Lezioni/: lezione2.c  lezione5.c
Lezioni/5/: 2.c  3.c  4.c
Test/: dynmatrix.c  provapile.c  random.c  time.c
