cmake_minimum_required(VERSION 3.23)
project(UninaLabEX C)

set(CMAKE_C_STANDARD 23)

add_executable(Lezione1 Lezioni/lezione1.c)
add_executable(Lezione2 Lezioni/lezione2.c)

#Esercitazioni
add_executable(Esercitazione11 Esercizi/1/1.c)
add_executable(Esercitazione12 Esercizi/1/2.c)
add_executable(Esercitazione13 Esercizi/1/3.c)
add_executable(Esercitazione14 Esercizi/1/4.c)
add_executable(Esercitazione15 Esercizi/1/5.c)
add_executable(Esercitazione16 Esercizi/1/6.c)
add_executable(Esercitazione17 Esercizi/1/7.c)
add_executable(Esercitazione18 Esercizi/1/8.c)
add_executable(Esercitazione19 Esercizi/1/9.c)
add_executable(Esercitazione110 Esercizi/1/10.c)
add_executable(Esercitazione111 Esercizi/1/11.c)
add_executable(Esercitazione112 Esercizi/1/12.c)
add_executable(Esercitazione113 Esercizi/1/13.c)
add_executable(Esercitazione114 Esercizi/1/14.c)
add_executable(Esercitazione115 Esercizi/1/15.c)
add_executable(Esercitazione116 Esercizi/1/16.c)
add_executable(Esercitazione117 Esercizi/1/17.c)
add_executable(Esercitazione118 Esercizi/1/18.c)
add_executable(Esercitazione119 Esercizi/1/19.c)
add_executable(Esercitazione120 Esercizi/1/20.c)
add_executable(Esercitazione121 Esercizi/1/21.c)
add_executable(Esercitazione122 Esercizi/1/22.c)
add_executable(Esercitazione123 Esercizi/1/23.c)
add_executable(Esercitazione124 Esercizi/1/24.c)
add_executable(Esercitazione125 Esercizi/1/25.c)
add_executable(Esercitazione126 Esercizi/1/26.c)
add_executable(Esercitazione127 Esercizi/1/27.c)
add_executable(Esercitazione128 Esercizi/1/28.c)
add_executable(Esercitazione129 Esercizi/1/29.c)
add_executable(Esercitazione130 Esercizi/1/30.c)
add_executable(Esercitazione131 Esercizi/1/31.c)
add_executable(Esercitazione132 Esercizi/1/32.c)
add_executable(Esercitazione133 Esercizi/1/33.c)
add_executable(Esercitazione134 Esercizi/1/34.c)
add_executable(Esercitazione135 Esercizi/1/35.c)
add_executable(Esercitazione136 Esercizi/1/36.c)
add_executable(Esercitazione137 Esercizi/1/37.c)
add_executable(Esercitazione138 Esercizi/1/38.c)
add_executable(Esercitazione139 Esercizi/1/39.c)
add_executable(Esercitazione140 Esercizi/1/40.c)
add_executable(Esercitazione141 Esercizi/1/41.c)
add_executable(Esercitazione142 Esercizi/1/42.c)
add_executable(Esercitazione143 Esercizi/1/43.c)
add_executable(Esercitazione144 Esercizi/1/44.c)
add_executable(Esercitazione145 Esercizi/1/45.c)
add_executable(Esercitazione146 Esercizi/1/46.c)
add_executable(Esercitazione147 Esercizi/1/47.c)
add_executable(Esercitazione148 Esercizi/1/48.c)
add_executable(Esercitazione149 Esercizi/1/49.c)

