cmake_minimum_required(VERSION 3.23)
project(UninaLabEX C)

set(CMAKE_C_STANDARD 23)

add_executable(Lezione1 Lezioni/lezione1.c)
add_executable(Lezione2 Lezioni/lezione2.c)

add_executable(Lezione5 Lezioni/lezione5.c)
add_executable(Lezione52 Lezioni/5/2.c)
add_executable(Lezione53 Lezioni/5/3.c)
add_executable(Lezione54 Lezioni/5/4.c)
#Esercitazioni
add_executable(Esercitazione11 Esercizi/1/1.c)
add_executable(Esercitazione12 Esercizi/1/2.c)
add_executable(Esercitazione13 Esercizi/1/3.c)
add_executable(Esercitazione14 Esercizi/1/4.c)
add_executable(Esercitazione15 Esercizi/1/5.c)
add_executable(Esercitazione16 Esercizi/1/6.c)
add_executable(Esercitazione17 Esercizi/1/7.c)
add_executable(Esercitazione18 Esercizi/1/8.c)
add_executable(Esercitazione19 Esercizi/1/9.c)
add_executable(Esercitazione110 Esercizi/1/10.c)
add_executable(Esercitazione111 Esercizi/1/11.c)
add_executable(Esercitazione112 Esercizi/1/12.c)
add_executable(Esercitazione113 Esercizi/1/13.c)
add_executable(Esercitazione114 Esercizi/1/14.c)
add_executable(Esercitazione115 Esercizi/1/15.c)
add_executable(Esercitazione116 Esercizi/1/16.c)
add_executable(Esercitazione117 Esercizi/1/17.c)
add_executable(Esercitazione118 Esercizi/1/18.c)
add_executable(Esercitazione119 Esercizi/1/19.c)
add_executable(Esercitazione120 Esercizi/1/20.c)
add_executable(Esercitazione121 Esercizi/1/21.c)
add_executable(Esercitazione122 Esercizi/1/22.c)
add_executable(Esercitazione123 Esercizi/1/23.c)
add_executable(Esercitazione124 Esercizi/1/24.c)
add_executable(Esercitazione125 Esercizi/1/25.c)
add_executable(Esercitazione126 Esercizi/1/26.c)
add_executable(Esercitazione127 Esercizi/1/27.c)
add_executable(Esercitazione128 Esercizi/1/28.c)
add_executable(Esercitazione129 Esercizi/1/29.c)
add_executable(Esercitazione130 Esercizi/1/30.c)
add_executable(Esercitazione131 Esercizi/1/31.c)
add_executable(Esercitazione132 Esercizi/1/32.c)
add_executable(Esercitazione133 Esercizi/1/33.c)
add_executable(Esercitazione134 Esercizi/1/34.c)
add_executable(Esercitazione135 Esercizi/1/35.c)
add_executable(Esercitazione136 Esercizi/1/36.c)
add_executable(Esercitazione137 Esercizi/1/37.c)
add_executable(Esercitazione138 Esercizi/1/38.c)
add_executable(Esercitazione139 Esercizi/1/39.c)
add_executable(Esercitazione140 Esercizi/1/40.c)
add_executable(Esercitazione141 Esercizi/1/41.c)
add_executable(Esercitazione142 Esercizi/1/42.c)
add_executable(Esercitazione143 Esercizi/1/43.c)
add_executable(Esercitazione144 Esercizi/1/44.c)
add_executable(Esercitazione145 Esercizi/1/45.c)
add_executable(Esercitazione146 Esercizi/1/46.c)
add_executable(Esercitazione147 Esercizi/1/47.c)
add_executable(Esercitazione148 Esercizi/1/48.c)
add_executable(Esercitazione149 Esercizi/1/49.c)
add_executable(Esercitazione21 Esercizi/2/1/1.c)
add_executable(Esercitazione22 Esercizi/2/1/2.c)
add_executable(Esercitazione23 Esercizi/2/1/3.c)
add_executable(Esercitazione24 Esercizi/2/1/4.c)
add_executable(Esercitazione25 Esercizi/2/1/5.c)
add_executable(Esercitazione26 Esercizi/2/1/6.c)
add_executable(Esercitazione27 Esercizi/2/1/7.c)
add_executable(Esercitazione28 Esercizi/2/1/8.c)
add_executable(Esercitazione29 Esercizi/2/1/9.c)
add_executable(Esercitazione210 Esercizi/2/1/10.c)
add_executable(Esercitazione211 Esercizi/2/1/11.c)
add_executable(Esercitazione212 Esercizi/2/1/12.c)
add_executable(Esercitazione213 Esercizi/2/1/13.c)
add_executable(Esercitazione214 Esercizi/2/1/14.c)
add_executable(Esercitazione215 Esercizi/2/1/15.c)
add_executable(Esercitazione216 Esercizi/2/1/16.c)
add_executable(Esercitazione217 Esercizi/2/1/17.c)
add_executable(Esercitazione218 Esercizi/2/1/18.c)
add_executable(Esercitazione219 Esercizi/2/1/19.c)
add_executable(Esercitazione220 Esercizi/2/1/20.c)
add_executable(Esercitazione221 Esercizi/2/2/1.c)
add_executable(Esercitazione222 Esercizi/2/2/2.c)
add_executable(Esercitazione223 Esercizi/2/2/3.c)
add_executable(Esercitazione224 Esercizi/2/2/4.c)
add_executable(Esercitazione225 Esercizi/2/2/5.c)
add_executable(Esercitazione226 Esercizi/2/2/6.c)
add_executable(Esercitazione227 Esercizi/2/2/7.c)
add_executable(Esercitazione228 Esercizi/2/3/1.c)
add_executable(Esercitazione229 Esercizi/2/3/2.c)
add_executable(Esercitazione230 Esercizi/2/3/3.c)
add_executable(Esercitazione231 Esercizi/2/3/4.c)
add_executable(Esercitazione232 Esercizi/2/3/5.c)
add_executable(Esercitazione233 Esercizi/2/3/6.c)
add_executable(Esercitazione234 Esercizi/2/3/7.c)
add_executable(Esercitazione235 Esercizi/2/3/8.c)
add_executable(Esercitazione236 Esercizi/2/3/9.c)
add_executable(Esercitazione237 Esercizi/2/3/10.c)
add_executable(Esercitazione238 Esercizi/2/3/11.c)
add_executable(Esercitazione239 Esercizi/2/4/1.c)
add_executable(Esercitazione240 Esercizi/2/4/2.c)
add_executable(Esercitazione241 Esercizi/2/4/3.c)
add_executable(Esercitazione242 Esercizi/2/4/4.c)
add_executable(Esercitazione301 Esercizi/3/1/1.c)
add_executable(Esercitazione302 Esercizi/3/1/2.c)
add_executable(Esercitazione303 Esercizi/3/2/1.c)
add_executable(Esercitazione304 Esercizi/3/2/2.c)
add_executable(Esercitazione305 Esercizi/3/2/3.c)
add_executable(Esercitazione306 Esercizi/3/2/4.c)
add_executable(Esercitazione307 Esercizi/3/3/1.c)
add_executable(Esercitazione308 Esercizi/3/3/2.c)
add_executable(Esercitazione309 Esercizi/3/3/3.c)
add_executable(Esercitazione310 Esercizi/3/3/4.c)
add_executable(Esercitazione401 Esercizi/4/1/0.c)
add_executable(Esercitazione402 Esercizi/4/1/1.c)
add_executable(Esercitazione403 Esercizi/4/1/2.c)
add_executable(Esercitazione404 Esercizi/4/1/3.c)
add_executable(Esercitazione405 Esercizi/4/2/1.c)
add_executable(Esercitazione406 Esercizi/4/2/2.c)
add_executable(Esercitazione407 Esercizi/4/2/3.c)
add_executable(Esercitazione408 Esercizi/4/2/4.c)
add_executable(Esercitazione409 Esercizi/4/2/5.c)
add_executable(Esercitazione410 Esercizi/4/2/6.c)
add_executable(Esercitazione411 Esercizi/4/2/7.c)
add_executable(Esercitazione412 Esercizi/4/2/8.c)
add_executable(Esercitazione413 Esercizi/4/2/9.c)
add_executable(Esercitazione414 Esercizi/4/2/10.c)
add_executable(Esercitazione415 Esercizi/4/2/11.c)
add_executable(Esercitazione416 Esercizi/4/2/12.c)
add_executable(Esercitazione417 Esercizi/4/2/13.c)
add_executable(Esercitazione418 Esercizi/4/2/14.c)

add_executable(Structs1 Esercizi/structs/1.c)
add_executable(Structs2 Esercizi/structs/2/2.c)

add_executable(Ricorsione1 Esercizi/ricorsione/1/1.c)
add_executable(Ricorsione2 Esercizi/ricorsione/1/2.c)
add_executable(Ricorsione3 Esercizi/ricorsione/1/3.c)
add_executable(Ricorsione4 Esercizi/ricorsione/1/4.c)
add_executable(Ricorsione5 Esercizi/ricorsione/1/5.c)
add_executable(Ricorsione6 Esercizi/ricorsione/1/6.c)
add_executable(Ricorsione7 Esercizi/ricorsione/1/7.c)
add_executable(Ricorsione8 Esercizi/ricorsione/1/8.c)

add_executable(Ricorsione9 Esercizi/ricorsione/2/1.c)
add_executable(Ricorsione10 Esercizi/ricorsione/2/2.c)
add_executable(Ricorsione11 Esercizi/ricorsione/2/3.c)
add_executable(Ricorsione12 Esercizi/ricorsione/2/4.c)

add_executable(Impiccato Esercizi/random_file/impiccato/main.c)
add_executable(Cassaforte Esercizi/random_file/cassaforte/main.c)


add_executable(Test1 Test/dynmatrix.c)
add_executable(Test2 Test/time.c)
add_executable(Test3 Test/random.c)
add_executable(Test4 Test/provapile.c)


add_executable(Esame1 Esami/1/main.c Esami/1/funzioni.c Esami/1/funzioni.h)
add_executable(Esame2 Esami/2/main.c Esami/2/funzioni.c Esami/2/funzioni.h)